# Audio-Spectrum-Visualizer

./: .gitignore  CMakeLists.txt  README.md
src/: audio_analyzer.cpp  audio_analyzer.hpp  eq_processor.hpp  fft.cpp  fft.hpp  file_dialog.cpp  file_dialog.hpp  main.cpp  shared_colors.hpp  spectrum_visualizer.cpp  spectrum_visualizer.hpp
vst/: gl_renderer.cpp  gl_renderer.hpp  plugin_controller.cpp  plugin_controller.hpp  plugin_editor.cpp  plugin_editor.hpp  plugin_entry.cpp  plugin_ids.hpp  plugin_processor.cpp  plugin_processor.hpp  shared_data.hpp  version.h
